--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
+    "chalk": "^5.3.0",
     "tslib": "~2.6"
   },
   "volta": {
